tests/test0141.ctr
'SINGLE_LANGUAGE'.

✎ write: 'Test Stack trace over multiple files.', stop.
Program use: 'tests/test0140.ctr'.
